# nixite

./: .gitignore  README.md  astro.config.mjs  components.json  eslint.config.js  index.html  nixite-cli.ts  nixite-updater.sh  package.json  registry.py  search_pkgs.py  sync-icons.py  test-installer.sh  test.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
nixite/: arch.sh  pyproject.toml  registry.toml  script.sh
nixite/src/nixite/: __init__.py  __main__.py  nixite.ts
nixite/src/nixite/res/: registry.toml  ubuntu.sh
public/: hooks.json  nixite-0.1.0-py3-none-any.whl  registry.json
registry/: $common.toml  @arch.sh  @common.sh  @debian.sh  @fedora.sh  @ubuntu.sh  _icons.yml  alacritty.toml  apt-ghostty.toml  apt-kicad.toml  apt-spotify.toml  apt-steam.toml  apt-ungoogled-chromium.toml  apt-vscodium.toml  apt-wezterm.toml  arch-kicad.toml  arch-multilib.toml  arduino-ide.toml  audacity.toml  blender.toml  brave.toml  btop.toml  bun.toml  chezmoi.toml  curl.toml  debian-contrib.toml  debian-non-free.toml  discord.toml  easytag.toml  fedora-chezmoi.toml  fedora-ghostty.toml  fedora-google-chrome.toml  fedora-kicad.toml  fedora-starship.toml  fedora-ungoogled-chromium.toml  fedora-vscode.toml  fedora-vscodium.toml  fedora-wezterm.toml  fedora-workstation-repositories.toml  fedora-zen-browser.toml  (+64 more)
src/: App.tsx  hooks.json  index.css  index.tsx  registry.json
src/assets/: hooks.json  registry.json
src/components/: Category.astro  Cmd.astro  Pkg.astro
src/features/: app.tsx
src/lib/: nixite.ts
src/pages/: index.astro
(+7 files in other folders)
