[project]
name = "nixite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Priyanshu Dangare", email = "aspizu@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "rich>=14.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
